tried to add favicon, fixed table pagination arrow alignment

--- a/app/assets/stylesheets/components/_tables.sass
+++ b/app/assets/stylesheets/components/_tables.sass
@@ -300,7 +300,7 @@ i.missing_grade
       cursor: not-allowed
 
   .table_next
-    top: 0.5px
+    top: 0
     right: -1.25em
 
   .table_prev
